# openfortivpn

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  openfortivpn@.service  tun.patch
.github/: SECURITY.md
.github/workflows/: codeql-analysis.yml  codespell.yml  coverity-scan.yml  doc-conversion.yml  openfortivpn.yml
ci/: install_astyle.sh  install_openssl.sh
contrib/: ifup-systemd-resolved.sh
doc/: openfortivpn.1  openfortivpn.1.in
etc/NetworkManager/dispatcher.d/: 30-pppVPN-rules.sh
etc/openfortivpn/: config  config.sample  config.template
etc/ppp/: ip-down.local  ip-down.local.example  ip-up.local  ip-up.local.example  ppp.conf.example
etc/ppp/peers/: openfortivpn
examples/: openfortivpn.service
lib/systemd/system/: openfortivpn@.service.in
snap/: snapcraft.yaml
src/: config.c  config.h  cookieRetriever.c  cookieRetriever.h  hdlc.c  hdlc.h  http.c  http.h  http_server.c  http_server.h  idlistener.c  idlistener.h  idretriever.c  idretriever.h  ifaddrs.c  ifaddrs.h  io.c  io.h  ipv4.c  ipv4.h  log.c  log.h  main.c  main.h  openssl_hostname_validation.c  openssl_hostname_validation.h  saml.c  saml.h  ssl.h  tunnel.c  tunnel.h  userinput.c  userinput.h  xml.c  xml.h
tests/ci/: install_astyle.sh  install_openssl.sh
tests/ci/checkpatch/: const_structs.checkpatch
tests/lint/: astyle.sh  checkpatch.sh  eol-at-eof.sh  line-length.py  line-length.sh  line_length.py  run.sh
